mobile bugfixes, css animations, and js restructure
+added testimony animations
+added slideshow animations
+removed common js from files and linked
+fixed history picture too small for viewports 450px < and too small on 420px >
+adjusted mobile image width
+fixed z-indexing on header slideshow increment buttons
+fixed mobile nav button disappearing on some pages

--- a/style.css
+++ b/style.css
@@ -124,12 +124,23 @@ section {
   padding-bottom: unset;
 }
 
-.container > img {
-  width: 70vw;
-  max-width: 600px;
-  align-self: center;
-  margin: 20px;
-  margin-inline: 15%;
+@media screen and (min-width:1100px) {
+  .container > img {
+    width: 70vw;
+    max-width: 600px;
+    align-self: center;
+    margin: 20px;
+    margin-inline: 15%;
+  }
+}
+@media screen and (max-width:1099px) {
+  .container > img {
+    width: 100%;
+    max-width: 600px;
+    align-self: center;
+    margin: 20px;
+    margin-inline: 15%;
+  }
 }
 
 .page_title > div > img {
@@ -213,7 +224,7 @@ p > a {
 #nav_drop_button {
   z-index: 3;
   border: 0;
-  margin:10px 0;
+  margin:10px auto;
   padding: 0;
   background-color: transparent;
   background-repeat: no-repeat;
@@ -243,13 +254,13 @@ p > a {
     transform: translate(-30%, 15px);
     background-image: var(--clr-nav-gradiant);
     border-radius: 0 0 0 50px;
-    animation: nav_dropDown ease 2s forwards;
+    animation: nav_dropDown ease-in-out 1.5s forwards;
     animation-iteration-count: 1;
   }
 
   @keyframes nav_dropDown {
-    from { margin-left: -115vw}
-    to { margin-left: 0; }
+    from { height: 0; opacity: 0;}
+    to { height: 620px; opacity: 1;}
   }
 
   #nav_drop_menu > a {
@@ -362,7 +373,7 @@ a > img:active {
 
 }
 
-@media screen and (max-width:1099px) and (min-width:420px) { 
+@media screen and (max-width:1099px) and (min-width:435px) { 
 
   .banner_l > a,
   .banner_r > a,
@@ -397,7 +408,7 @@ a > img:active {
   }
 }
 
-@media screen and (max-width:419px) {
+@media screen and (max-width:434px) {
   
   .banner_l > a,
   .banner_r > a,
@@ -409,6 +420,18 @@ a > img:active {
     width:25px;
   }
 
+  @-moz-document url-prefix() {
+    .banner_l > a,
+    .banner_r > a,
+    .banner_r > button {
+      margin-inline: 3%;
+    }
+  
+    a > img {
+      width:24px;
+    }
+}
+
   .mobile_nav_button {
     z-index: 4;
     width:34px;
@@ -417,7 +440,7 @@ a > img:active {
     background-color:var(--clr-primary-a);
     border-radius: .6rem;
     box-shadow: 2px 2px 4px #000;
-    right:20px;
+    
   }  
 
   #link_menu {
@@ -447,6 +470,16 @@ a > img:active {
 #header_slideshow_pics {
   background-repeat: no-repeat;
   background-image: url(assets/banner_title.png);
+  animation: header_auto_fadeOutthenIn 8s linear forwards infinite;
+  animation-delay: 4s;
+}
+
+@keyframes header_auto_fadeOutthenIn {
+  from { opacity: 100%; }
+  45% { opacity: 90%;}
+  50% { opacity: 0%; }
+  55% { opacity: 90%;}
+  to { opacity: 100%; }
 }
 
 #header_slideshow_left, #header_slideshow_right {
@@ -504,6 +537,7 @@ a > img:active {
     top: 225px;
     filter: drop-shadow(8px 8px 10px rgb(29, 1, 1));
     opacity: 85%;
+    z-index: 2;
   }
 
   #header_slideshow_left {
@@ -570,7 +604,7 @@ a > img:active {
   }
 
   .split > img {
-    width: 70vw;
+    width: 100%;
     max-width: 600px;
     align-self: center;
     margin: 20px;
@@ -618,9 +652,16 @@ a > img:active {
   font-weight: 1900;
 }
 
-#history_pic {
-  max-width: 45%;
-  min-width: 450px;
+@media screen and (min-width:1100px) { 
+  #history_pic {
+    max-width: 45%;
+    width: 90vw;
+  }
+}
+@media screen and (max-width:1099px) {
+  #history_pic {
+    width: 90vw;
+  }
 }
 
 .gallery_collage {
@@ -652,9 +693,9 @@ a > img:active {
 .fancy_button {
   align-self: center;
   width: 40%;
-  min-width: 280px;
+  min-width: 230px;
   height: 50px;
-  margin: 40px;
+  margin: 5%;
   background: hsl(57deg 100% 32%);
   border-radius: 12px;
   border: none;
@@ -710,16 +751,10 @@ a > img:active {
   margin: 3%;
 }
 
-.profile_card > p {
-}
-
 @media screen and (min-width:1100px) { 
   
   .profile_card {
     flex-direction: row;
-  }
-
-  .profile_card > span {
   }
 
   .profile_card > img {
@@ -736,17 +771,8 @@ a > img:active {
 
 @media screen and (max-width:1099px) { 
 
-  .profile_card {
-  }
-
-  .profile_card > span {
-  }
-
   .profile_card > img {
     max-width: 500px;
-  }
-
-  .profile_card > p {
   }
 
 }
@@ -791,11 +817,6 @@ footer {
   background-color: var(--clr-footer-a);
 }
 
-#testimony_slideshow,
-#testimony_slideshow_caption {
-}
-
-
 @media screen and (min-width:1300px) {
 
   .footer_card_large {
@@ -804,7 +825,7 @@ footer {
 
 }
 
-@media screen and (max-width:1299px) and (min-width:420px) { 
+@media screen and (max-width:1299px) and (min-width:435px) { 
 
   .footer_card_large {
     width: 500px;
@@ -813,7 +834,7 @@ footer {
 
 }
 
-@media screen and (max-width:419px) {   
+@media screen and (max-width:434px) {   
   
   footer {
     font-size: 1.1rem;
@@ -843,6 +864,21 @@ footer {
   color: var(--clr-footer-font);
   text-decoration: underline;
 }
+
+#testimony_slideshow,
+#testimony_slideshow_caption {
+  animation: footer_fadeOutthenIn 8s linear forwards infinite;
+  animation-delay: 4s;
+}
+
+@keyframes footer_fadeOutthenIn {
+  from { opacity: 1; }
+  45% { opacity: 80%;}
+  50% { opacity: 0%; }
+  55% { opacity: 80%;}
+  to { opacity: 1; }
+}
+
 
 #footer_sitemap > div > h4 {
   margin: 0;
@@ -905,9 +941,8 @@ footer {
   width: 70vw;
   max-width: 500px;
   min-width: 300px;
-  min-height: fit-content;
-  height: fit-content;
-  max-height: 84vh;
+  height: unset;
+  max-height: 75vh;
   transform: translate(-50%, 8%);
   border-style: groove;
   border-bottom: double;
